# PAC_6_CLI_tools

./: .gitignore  Cli.py  README.md  debug_env.py  debug_test.py  debug_validation.py  env_example.txt  pyproject.toml  quality.db  requirements.txt  resultadocompleto.json  resultadooo.json  resultados.json  resultados_1.json  setup_env.py  test_simple.py
analyzer/: analyze_bugs_ai.py  analyze_classes.py  analyze_comment_ratio.py  analyze_comments.py  analyze_complexity.py  analyze_dead_code.py  analyze_docstrings.py  analyze_duplicate_code.py  analyze_function_size.py  analyze_functions.py  analyze_indentation.py  analyze_lines.py  analyze_methods.py  dependency_analyzer.py  main.py  output_formatter.py
docs/: BUGS_AI.md  CACHE.md
examples/: buggy_code.py  sample.py  sample2.py  sample3.py  sample_full.py  simpletest.py
quality_server/: requirements.txt
quality_server/app/: crud.py  database.py  main.py  models.py  schemas.py
quality_server/app/templates/: dashboard.html  projects.html
scripts/: run_tests.py
tests/: test_bugs_ai.py  test_classes.py  test_comment_ratio.py  test_comments.py  test_dependency.py  test_docstrings.py  test_duplicate_code.py  test_function_size.py  test_functions.py  test_indentation.py  test_integration.py  test_lines.py  test_methods.py
